force-app/main/default/objects/ucinn_portal_Listing__c/ucinn_portal_Listing__c.object-meta.xml
<CustomObject>
    <label>Listing</label>
    <nameField>
        <label>Listing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>