force-app/main/default/objects/ucinn_portal_Listing__c/fields/Actual_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Actual_Start_Date_Time__c</fullName>
    <inlineHelpText>Format as YYYY-MM-DD HH:MM:SS and time should be formatted in 24-hour format</inlineHelpText>
    <label>Actual Start Date/Time</label>
    <length>24</length>
    <type>Text</type>
</CustomField>