force-app/main/default/objects/ucinn_portal_Listing__c/fields/Alumni_Portal_Base_Url__c.field-meta.xml
<CustomField>
    <fullName>Alumni_Portal_Base_Url__c</fullName>
    <label>Alumni Portal Base Url</label>
    <type>Url</type>
</CustomField>