force-app/main/default/objects/ucinn_portal_Listing__c/fields/Article_Length__c.field-meta.xml
<CustomField>
    <fullName>Article_Length__c</fullName>
    <label>Article Length</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Short ( &lt; 1000 words)</fullName>
            </value>
            <value>
                <fullName>Medium (1000 - 5000 words)</fullName>
            </value>
            <value>
                <fullName>Long ( &gt; 5000 words)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>