force-app/main/default/objects/ucinn_portal_Listing__c/fields/Body_Content__c.field-meta.xml
<CustomField>
    <fullName>Body_Content__c</fullName>
    <label>Body Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>