force-app/main/default/objects/ucinn_portal_Listing__c/fields/Body_Content_Plain_Text__c.field-meta.xml
<CustomField>
    <fullName>Body_Content_Plain_Text__c</fullName>
    <label>Body Content Plain Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>