force-app/main/default/objects/ucinn_portal_Listing__c/fields/Cache_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Cache_API_Name__c</fullName>
    <label>Cache API Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>