force-app/main/default/objects/ucinn_portal_Listing__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The appeal to assign the ticket gift amount to.</description>
    <label>Appeal</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>ucinn_portal_Listings_Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>