force-app/main/default/objects/ucinn_portal_Listing__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>ucinn_portal_Listings_Case</relationshipName>
    <type>Lookup</type>
</CustomField>