force-app/main/default/objects/ucinn_portal_Listing__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Careers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>