force-app/main/default/objects/ucinn_portal_Listing__c/fields/Class_Note_Category__c.field-meta.xml
<CustomField>
    <fullName>Class_Note_Category__c</fullName>
    <label>Class Note Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Births and Adoptions</fullName>
            </value>
            <value>
                <fullName>Career News</fullName>
            </value>
            <value>
                <fullName>Marriages and Relationships</fullName>
            </value>
            <value>
                <fullName>Educational News</fullName>
            </value>
            <value>
                <fullName>Obituaries</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>