force-app/main/default/objects/ucinn_portal_Listing__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <label>United States</label>
            </value>
            <value>
                <fullName>AF</fullName>
                <label>Afghanistan</label>
            </value>
            <value>
                <fullName>AL</fullName>
                <label>Albania</label>
            </value>
            <value>
                <fullName>AG</fullName>
                <label>Algeria</label>
            </value>
            <value>
                <fullName>AQ</fullName>
                <label>American Samoa</label>
            </value>
            <value>
                <fullName>AN</fullName>
                <label>Andorra</label>
            </value>
            <value>
                <fullName>AO</fullName>
                <label>Angola</label>
            </value>
            <value>
                <fullName>AV</fullName>
                <label>Anguilla</label>
            </value>
            <value>
                <fullName>AY</fullName>
                <label>Antarctica</label>
            </value>
            <value>
                <fullName>AC</fullName>
                <label>Antigua and Barbuda</label>
            </value>
            <value>
                <fullName>AR</fullName>
                <label>Argentina</label>
            </value>
            <value>
                <fullName>AM</fullName>
                <label>Armenia</label>
            </value>
            <value>
                <fullName>AB</fullName>
                <label>Aruba</label>
            </value>
            <value>
                <fullName>AT</fullName>
                <label>Ashmore and Cartier</label>
            </value>
            <value>
                <fullName>AS</fullName>
                <label>Australia</label>
            </value>
            <value>
                <fullName>AU</fullName>
                <label>Austria</label>
            </value>
            <value>
                <fullName>AZ</fullName>
                <label>Azerbaijan</label>
            </value>
            <value>
                <fullName>BF</fullName>
                <label>Bahamas</label>
            </value>
            <value>
                <fullName>BA</fullName>
                <label>Bahrain</label>
            </value>
            <value>
                <fullName>BJ</fullName>
                <label>Bali</label>
            </value>
            <value>
                <fullName>BG</fullName>
                <label>Bangladesh</label>
            </value>
            <value>
                <fullName>BB</fullName>
                <label>Barbados</label>
            </value>
            <value>
                <fullName>BO</fullName>
                <label>Belarus</label>
            </value>
            <value>
                <fullName>BE</fullName>
                <label>Belgium</label>
            </value>
            <value>
                <fullName>BZ</fullName>
                <label>Belize</label>
            </value>
            <value>
                <fullName>BN</fullName>
                <label>Benin</label>
            </value>
            <value>
                <fullName>BD</fullName>
                <label>Bermuda</label>
            </value>
            <value>
                <fullName>BT</fullName>
                <label>Bhutan</label>
            </value>
            <value>
                <fullName>BL</fullName>
                <label>Bolivia</label>
            </value>
            <value>
                <fullName>BH</fullName>
                <label>Bosnia Herzegovina</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>