force-app/main/default/objects/ucinn_portal_Listing__c/fields/Date_Time_Format__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Format__c</fullName>
    <formula>&quot;YYYY-MM-DD HH:MM:SS&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Time Format</label>
    <type>Text</type>
</CustomField>