force-app/main/default/objects/ucinn_portal_Listing__c/fields/Designation__c.field-meta.xml
<CustomField>
    <fullName>Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The designation to assign the ticket gift amount to. This designation will apply for all related ticket types, unless the ticket type&apos;s designation field is populated.</description>
    <label>Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>ucinn_portal_Listings_Designation</relationshipName>
    <type>Lookup</type>
</CustomField>