force-app/main/default/objects/ucinn_portal_Listing__c/fields/Email_Confirmation_Details__c.field-meta.xml
<CustomField>
    <fullName>Email_Confirmation_Details__c</fullName>
    <label>Email Confirmation Details</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>