force-app/main/default/objects/ucinn_portal_Listing__c/fields/Event_Submitter_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Submitter_Email__c</fullName>
    <label>Event Submitter Email</label>
    <type>Email</type>
</CustomField>