force-app/main/default/objects/ucinn_portal_Listing__c/fields/Event_Submitter_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Submitter_Name__c</fullName>
    <label>Event Submitter Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>