force-app/main/default/objects/ucinn_portal_Listing__c/fields/Event_Submitter_Phone__c.field-meta.xml
<CustomField>
    <fullName>Event_Submitter_Phone__c</fullName>
    <label>Event Submitter Phone</label>
    <type>Phone</type>
</CustomField>