force-app/main/default/objects/ucinn_portal_Listing__c/fields/External_Email_API_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Email_API_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>External Email API Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>