force-app/main/default/objects/ucinn_portal_Listing__c/fields/Footer_Content__c.field-meta.xml
<CustomField>
    <fullName>Footer_Content__c</fullName>
    <label>Footer Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>