force-app/main/default/objects/ucinn_portal_Listing__c/fields/Format__c.field-meta.xml
<CustomField>
    <fullName>Format__c</fullName>
    <label>Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Article</fullName>
            </value>
            <value>
                <fullName>Video</fullName>
            </value>
            <value>
                <fullName>Podcast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>