force-app/main/default/objects/ucinn_portal_Listing__c/fields/Giving_Societies__c.field-meta.xml
<CustomField>
    <fullName>Giving_Societies__c</fullName>
    <label>Giving Societies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Giving_Societies</valueSetName>
    </valueSet>
</CustomField>