force-app/main/default/objects/ucinn_portal_Listing__c/fields/Has_Email_QR_Check_In__c.field-meta.xml
<CustomField>
    <fullName>Has_Email_QR_Check_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Email QR Check-In</label>
    <type>Checkbox</type>
</CustomField>