force-app/main/default/objects/ucinn_portal_Listing__c/fields/Header_Caption__c.field-meta.xml
<CustomField>
    <fullName>Header_Caption__c</fullName>
    <label>Header Caption</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>