force-app/main/default/objects/ucinn_portal_Listing__c/fields/Header_Content__c.field-meta.xml
<CustomField>
    <fullName>Header_Content__c</fullName>
    <label>Header Content</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>