force-app/main/default/objects/ucinn_portal_Listing__c/fields/Header_Image__c.field-meta.xml
<CustomField>
    <fullName>Header_Image__c</fullName>
    <label>Header Image</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>