force-app/main/default/objects/ucinn_portal_Listing__c/fields/Header_Image_Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Header_Image_Alt_Text__c</fullName>
    <label>Header Image Alt Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>