force-app/main/default/objects/ucinn_portal_Listing__c/fields/Is_Allow_Waitlisting_for_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Allow_Waitlisting_for_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Allow Waitlisting for Event</label>
    <type>Checkbox</type>
</CustomField>