force-app/main/default/objects/ucinn_portal_Listing__c/fields/Is_Allowed_To_Publish_To_Social_Media__c.field-meta.xml
<CustomField>
    <fullName>Is_Allowed_To_Publish_To_Social_Media__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Allowed To Publish To Social Media</label>
    <type>Checkbox</type>
</CustomField>