force-app/main/default/objects/ucinn_portal_Listing__c/fields/Is_Deleted_In_Email_API__c.field-meta.xml
<CustomField>
    <fullName>Is_Deleted_In_Email_API__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted In Email API</label>
    <type>Checkbox</type>
</CustomField>