force-app/main/default/objects/ucinn_portal_Listing__c/fields/Is_Display_Look_Who_s_Coming__c.field-meta.xml
<CustomField>
    <fullName>Is_Display_Look_Who_s_Coming__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show list of participants who are coming.</description>
    <label>Is Display Look Who&apos;s Coming</label>
    <type>Checkbox</type>
</CustomField>