force-app/main/default/objects/ucinn_portal_Listing__c/fields/Is_Featured__c.field-meta.xml
<CustomField>
    <fullName>Is_Featured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, this listing will appear at the beginning of the listings.</description>
    <label>Is Featured</label>
    <type>Checkbox</type>
</CustomField>