force-app/main/default/objects/ucinn_portal_Listing__c/fields/Is_Guest_Registration_Info_Required__c.field-meta.xml
<CustomField>
    <fullName>Is_Guest_Registration_Info_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Guest Registration Info Required</label>
    <type>Checkbox</type>
</CustomField>