force-app/main/default/objects/ucinn_portal_Listing__c/fields/Is_Newsletter_Sent__c.field-meta.xml
<CustomField>
    <fullName>Is_Newsletter_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Newsletter Sent</label>
    <type>Checkbox</type>
</CustomField>