force-app/main/default/objects/ucinn_portal_Listing__c/fields/Is_Non_Ticketed_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Non_Ticketed_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Non Ticketed Event</label>
    <type>Checkbox</type>
</CustomField>