force-app/main/default/objects/ucinn_portal_Listing__c/fields/Is_Online_Event__c.field-meta.xml
<CustomField>
    <fullName>Is_Online_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Online Event</label>
    <type>Checkbox</type>
</CustomField>