force-app/main/default/objects/ucinn_portal_Listing__c/fields/Listing_Detail_URL__c.field-meta.xml
<CustomField>
    <fullName>Listing_Detail_URL__c</fullName>
    <label>Listing Detail URL</label>
    <type>Url</type>
</CustomField>