force-app/main/default/objects/ucinn_portal_Listing__c/fields/Listing_Name_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>Listing_Name_Auto_Number__c</fullName>
    <displayFormat>LI-{0000000}</displayFormat>
    <label>Listing Name Auto Number</label>
    <type>AutoNumber</type>
</CustomField>