force-app/main/default/objects/ucinn_portal_Listing__c/fields/Look_Who_s_Coming_Minimum__c.field-meta.xml
<CustomField>
    <fullName>Look_Who_s_Coming_Minimum__c</fullName>
    <description>The minimum amount of participants an event must have before showing the Look Who&apos;s Coming list.</description>
    <inlineHelpText>A blank value is treated the same as 1.</inlineHelpText>
    <label>Look Who&apos;s Coming Minimum</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>