force-app/main/default/objects/ucinn_portal_Listing__c/fields/Master_Listing__c.field-meta.xml
<CustomField>
    <fullName>Master_Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Listing</label>
    <referenceTo>ucinn_portal_Listing__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>ucinn_portal_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>