force-app/main/default/objects/ucinn_portal_Listing__c/fields/Maximum_Number_of_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Number_of_Enrollment__c</fullName>
    <label>Maximum Number of Enrollment</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>