force-app/main/default/objects/ucinn_portal_Listing__c/fields/Newsletter_HTML_Format__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_HTML_Format__c</fullName>
    <label>Newsletter HTML Format</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>