force-app/main/default/objects/ucinn_portal_Listing__c/fields/Newsletter_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Metrics__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Newsletter Metrics</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>ucinn_portal_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>