force-app/main/default/objects/ucinn_portal_Listing__c/fields/Newsletter_Template__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Newsletter Template</label>
    <referenceTo>ucinn_portal_Listing__c</referenceTo>
    <relationshipLabel>Listings (Newsletter Template)</relationshipLabel>
    <relationshipName>ucinn_portal_Newsletters</relationshipName>
    <type>Lookup</type>
</CustomField>