force-app/main/default/objects/ucinn_portal_Listing__c/fields/Non_Gift_Designation__c.field-meta.xml
<CustomField>
    <fullName>Non_Gift_Designation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Non-Gift Designation</label>
    <referenceTo>ucinn_ascendv2__Designation__c</referenceTo>
    <relationshipLabel>Listings (Non-Gift Designation)</relationshipLabel>
    <relationshipName>ucinn_portal_Listings_NonGiftDesignation</relationshipName>
    <type>Lookup</type>
</CustomField>