force-app/main/default/objects/ucinn_portal_Listing__c/fields/Number_Of_Newsletter_Recipients__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Newsletter_Recipients__c</fullName>
    <label>Number Of Newsletter Recipients</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>