force-app/main/default/objects/ucinn_portal_Listing__c/fields/Online_Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Online_Event_URL__c</fullName>
    <label>Online Event URL</label>
    <type>Url</type>
</CustomField>