force-app/main/default/objects/ucinn_portal_Listing__c/fields/Portal_Subdomain__c.field-meta.xml
<CustomField>
    <fullName>Portal_Subdomain__c</fullName>
    <label>Portal Subdomain</label>
    <length>40</length>
    <type>Text</type>
</CustomField>