force-app/main/default/objects/ucinn_portal_Listing__c/fields/Portal_Zone__c.field-meta.xml
<CustomField>
    <fullName>Portal_Zone__c</fullName>
    <label>Portal Zone</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Portal_Zone</valueSetName>
    </valueSet>
</CustomField>