force-app/main/default/objects/ucinn_portal_Listing__c/fields/Preview_Link__c.field-meta.xml
<CustomField>
    <fullName>Preview_Link__c</fullName>
    <formula>Alumni_Portal_Base_Url__c &amp; &quot;s/listing-detail?recordId=&quot; &amp; Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preview Link</label>
    <type>Text</type>
</CustomField>