force-app/main/default/objects/ucinn_portal_Listing__c/fields/Publication_Date__c.field-meta.xml
<CustomField>
    <fullName>Publication_Date__c</fullName>
    <label>Publication Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>