force-app/main/default/objects/ucinn_portal_Listing__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>ucinn_portal_Recipient__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>ucinn_portal_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>