force-app/main/default/objects/ucinn_portal_Listing__c/fields/Recommend_Type_3__c.field-meta.xml
<CustomField>
    <fullName>Recommend_Type_3__c</fullName>
    <label>Recommend Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Content_Type</valueSetName>
    </valueSet>
</CustomField>