force-app/main/default/objects/ucinn_portal_Listing__c/fields/Registration_Description__c.field-meta.xml
<CustomField>
    <fullName>Registration_Description__c</fullName>
    <description>Can either be a URL or just text description</description>
    <label>Registration Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>