force-app/main/default/objects/ucinn_portal_Listing__c/fields/Registration_Template__c.field-meta.xml
<CustomField>
    <fullName>Registration_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Registration Template</label>
    <referenceTo>ucinn_portal_Registration_Template__c</referenceTo>
    <relationshipLabel>Listings</relationshipLabel>
    <relationshipName>ucinn_portal_Listings</relationshipName>
    <type>Lookup</type>
</CustomField>