force-app/main/default/objects/ucinn_portal_Listing__c/fields/Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>Registration_URL__c</fullName>
    <label>Registration URL</label>
    <length>512</length>
    <type>LongTextArea</type>
</CustomField>