force-app/main/default/objects/ucinn_portal_Listing__c/fields/Scheduled_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Job_Id__c</fullName>
    <label>Scheduled Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>