force-app/main/default/objects/ucinn_portal_Listing__c/fields/Status_Copy__c.field-meta.xml
<CustomField>
    <fullName>Status_Copy__c</fullName>
    <formula>Text(Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>