force-app/main/default/objects/ucinn_portal_Listing__c/fields/Subject_Line__c.field-meta.xml
<CustomField>
    <fullName>Subject_Line__c</fullName>
    <label>Subject Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>