force-app/main/default/objects/ucinn_portal_Listing__c/fields/Tag_2__c.field-meta.xml
<CustomField>
    <fullName>Tag_2__c</fullName>
    <label>Tag 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sub_Recommendation_Types</valueSetName>
    </valueSet>
</CustomField>