force-app/main/default/objects/ucinn_portal_Listing__c/fields/Thumbnail_Image__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image__c</fullName>
    <label>Thumbnail Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>