force-app/main/default/objects/ucinn_portal_Listing__c/fields/Thumbnail_Image_Alt_Text__c.field-meta.xml
<CustomField>
    <fullName>Thumbnail_Image_Alt_Text__c</fullName>
    <label>Thumbnail Image Alt Text</label>
    <type>TextArea</type>
</CustomField>