force-app/main/default/objects/ucinn_portal_Listing__c/fields/Times_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Times_Viewed__c</fullName>
    <label>Times Viewed</label>
    <summarizedField>ucinn_portal_Action_On_Content__c.Times_Viewed__c</summarizedField>
    <summaryForeignKey>ucinn_portal_Action_On_Content__c.Listing__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>