force-app/main/default/objects/ucinn_portal_Listing__c/fields/Top_Story_Date__c.field-meta.xml
<CustomField>
    <fullName>Top_Story_Date__c</fullName>
    <label>Top Story Date</label>
    <type>DateTime</type>
</CustomField>